--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
     <div class="nav-bar" id="nav-bar">
         <div class="bar-div">
             <img src="img/logo.png" alt="" class="logo" id="logo">
-            <div class="nav-links-1">MENU</div>
-            <div class="nav-links-1">REWARDS</div>
-            <div class="nav-links-1">GIFT CARDS</div>
+            <div class="nav-links-1 hover-green">MENU</div>
+            <div class="nav-links-1 hover-green">REWARDS</div>
+            <div class="nav-links-1 hover-green">GIFT CARDS</div>
         </div>
         <div class="bar-div">
-            <div class="nav-links-2"><img src="img/map-icon.png" id="map-icon">
+            <div class="nav-links-2 hover-green" id="map">
+                <img src="img/map-icon.png" id="map-icon" class="map-icon">
                 <p>Find store</p>
             </div>
             <div class="nav-links-2 btn simple">Sign in</div>
@@ -57,8 +58,8 @@
             <div class="btn" id="sign-in">Sign in </div>
             <div class="btn invert" id="join-now">Join now</div>
         </div>
-        <div class="menu-links-3">
-            <img src="img/map-icon.png" id="map-icon">
+        <div class="menu-links-3 hover-green" id="map-for-mobile">
+            <img src="img/map-icon.png" id="map-icon-for-mobile" class="map-icon">
             <p>Find a store</p>
         </div>
     </div>
