Implemented further menu list for smartphones

--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
         </div>
     </div>
 
+    <div class="further-menu" id="further-menu">
+        <div class="menu-heading">
+            <p class="back-btn" id="menu-back-btn">&#8249;</p>
+            <div>MENU</div>
+        </div>
+        <div class="menu-list">
+            <div><a href="#">All products</a></div>
+            <div><a href="#">Featured</a></div>
+            <div><a href="#">Previous Orders</a></div>
+            <div><a href="#">Favorite Products</a></div>
+        </div>
+    </div>
+
     <div class="card reverse">
         <img src="img/ci-1.jpg" alt="" class="card-img">
 
