--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="menu-links-1">
             <div class="ml-1" id="menu">
                 <p>Menu</p>
-                <p id="menu-menu">&#10095;</p>
+                <p id="menu-further">&#10095;</p>
             </div>
             <div class="ml-1" id="rewards">Rewards</div>
             <div class="ml-1" id="gift-cards">Gift Cards</div>
@@ -66,7 +66,7 @@
 
     <div class="further-menu" id="further-menu">
         <div class="menu-heading">
-            <p class="back-btn" id="menu-back-btn">&#8249;</p>
+            <p class="back-btn" id="menu-back-btn">&#10094;</p>
             <div>MENU</div>
         </div>
         <div class="menu-list">
